Added Visitors Table & Embedded Video

--- a/home.html
+++ b/home.html
@@ -51,14 +51,41 @@
         </nav>
       </header>
     <main>
-      <section>
-        <p>
-          Welcome text
-        </p>
-        <p>
-          Mission statement
-        </p>
-      </section>
+        <section id="video-section">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Bf0Q0S2tXNE?si=0ixmDWlONGiJMnDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </section>
+        <section >
+            <table >
+              <tr>
+                <th>Month</th>
+                <th>Visitors</th>
+              </tr>
+              <tr>
+                <td>January</td>
+                <td>130158</td>
+              </tr>
+              <tr>
+                <td>February</td>
+                <td>120295</td>
+              </tr>
+              <tr>
+                <td>March</td>
+                <td>250300</td>
+              </tr>
+              <tr>
+                <td>April</td>
+                <td>580387</td>
+              </tr>
+              <tr>
+                <td>June</td>
+                <td>450569</td>
+              </tr>
+              <tr>
+                <td>July</td>
+                <td>770781</td>
+              </tr>
+            </table>
+          </section>
     </main>
     <footer id="cookies"><a href="#">Accept cookies</a></footer>
   </body>
