Home Page Completed

--- a/home.html
+++ b/home.html
@@ -7,11 +7,10 @@
     <meta
       name="description"
       content="
-      IMM News Network: Your source for global news. Unbiased, real-time updates. Explore our about page to learn more."
+      IMM News: Your source for global news. Unbiased, real-time updates. Explore our about page to learn more."
     />
     <meta name="author" name="Sai Kumar" />
     <meta name="keywords" content="News, IMM, Sports, Tech, Real Estate" />
-    
 
     <link
       rel="apple-touch-icon"
@@ -35,57 +34,220 @@
   </head>
   <body>
     <header>
-        <nav>
-          <div>
-            <a
-              ><img
-                src="./Logo/IMM News Logo.png"
-                alt="IMM News Logo"
-            /></a>
-          </div>
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contactus.html">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+      <nav>
+        <div>
+          <a><img src="./Logo/IMM News Logo.png" alt="IMM News Logo" /></a>
+        </div>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contactus.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-        <section id="video-section">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Bf0Q0S2tXNE?si=0ixmDWlONGiJMnDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </section>
-        <section >
-            <table >
-              <tr>
-                <th>Month</th>
-                <th>Visitors</th>
-              </tr>
-              <tr>
-                <td>January</td>
-                <td>130158</td>
-              </tr>
-              <tr>
-                <td>February</td>
-                <td>120295</td>
-              </tr>
-              <tr>
-                <td>March</td>
-                <td>250300</td>
-              </tr>
-              <tr>
-                <td>April</td>
-                <td>580387</td>
-              </tr>
-              <tr>
-                <td>June</td>
-                <td>450569</td>
-              </tr>
-              <tr>
-                <td>July</td>
-                <td>770781</td>
-              </tr>
-            </table>
-          </section>
+      <section>
+        <h1>Bienvenue! This is IMM News</h1>
+        <p>
+          Bienvenue! IMM News, your go-to source for up-to-the-minute
+          information and comprehensive coverage of world events. Our committed
+          team of journalists is here to bring you reliable, objective, and
+          interesting news from all over the world. Welcome to a world where you
+          can trust the news.
+        </p>
+      </section>
+
+      <section>
+        <article>
+          <img src="./Pics/5009.jpg" alt="Roger Federer waving to the crowd" />
+          <p>By Tumaini Carayol</p>
+          <h4>
+            This article is more than 1 year old Roger Federer announces
+            retirement from tennis after stellar career
+          </h4>
+          <p>
+            Roger Federer will retire next week at the age of 41 after the Laver
+            Cup in London, marking the end of one of the greatest ever sporting
+            careers.
+          </p>
+          <a href="./Articles/featuredArticle.html">Read full story...</a>
+        </article>
+      </section>
+
+      <section id="article-categories">
+        <h2>Categories</h2>
+        <ul>
+          <li>
+            <h3>Industry</h3>
+            <ul>
+              <li>
+                <article>
+                  <img
+                    src="./Pics/Industry1.webp"
+                    alt="A pedestrian walks past commercial real estate for lease in Toronto."
+                  />
+                  <p>By Stephanie Hughes</p>
+                  <h4>
+                    Commercial real estate woes in Canada worsened by tax gap
+                  </h4>
+                  <p>
+                    Commercial real estate owners, battered by higher interest
+                    rates, are grappling with another big challenge in Canada: a
+                    property tax system that’s increasingly tilted against them,
+                    according to a report by Altus Group Ltd.
+                  </p>
+                  <a href="./Articles/featuredArticle.html"
+                    >Read full story...</a
+                  >
+                </article>
+              </li>
+              <li>
+                <article>
+                  <img
+                    src="./Pics/Industry2.webp"
+                    alt="A person walks by a row of houses in Toronto."
+                  />
+                  <p>By SMurtaza Haider and Stephen Moranis</p>
+                  <h4>
+                    Hoping for a recession to decrease housing prices is like
+                    wishing for a flood to water your garden
+                  </h4>
+                  <p>
+                    Housing sales data from the Toronto region suggests markets
+                    will likely favour buyers given the sudden increase in
+                    listings — some are even calling it a buyers’ market.
+                  </p>
+                  <a href="./Articles/featuredArticle.html"
+                    >Read full story...</a
+                  >
+                </article>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <h3>Technology</h3>
+            <ul>
+              <li>
+                <article>
+                  <img
+                    src="./Pics/Tech1.webp"
+                    alt="The back of the Pro is matte glass."
+                  />
+                  <p>By Julian Chokkattu</p>
+                  <h4>Review: Google Pixel 8 and Pixel 8 Pro</h4>
+                  <p>
+                    These pricier Pixels impress with refined hardware and
+                    clever software tricks.
+                  </p>
+                  <a href="./Articles/featuredArticle.html"
+                    >Read full story...</a
+                  >
+                </article>
+              </li>
+              <li>
+                <article>
+                  <img
+                    src="./Pics/Tech2.webp"
+                    alt="The S23 Ultra includes Samsung’s S Pen stylus, complete with an embedded silo for storage."
+                  />
+                  <p>By Allison Johnson</p>
+                  <h4>Samsung Galaxy S23 Ultra review: practically peerless</h4>
+                  <p>
+                    It’s big, expensive, and occasionally weird. But the S23
+                    Ultra lives up to its name.
+                  </p>
+                  <a href="./Articles/featuredArticle.html"
+                    >Read full story...</a
+                  >
+                </article>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <h3>Career</h3>
+            <ul>
+              <li>
+                <article>
+                  <img
+                    src="./Pics/Career1.jpeg"
+                    alt="A healthcare worker holding an iPad and smiling"
+                  />
+                  <p>By Colin R. Singer</p>
+                  <h4>Here Are The 10 Most-In Demand Jobs In Ontario</h4>
+                  <p>
+                    Healthcare workers and professional and technical services
+                    are in big demand in Ontario meaning job hunters are eyeing
+                    new opportunities compared to the start of the year.
+                  </p>
+                  <a href="./Articles/featuredArticle.html"
+                    >Read full story...</a
+                  >
+                </article>
+              </li>
+              <li>
+                <article>
+                    <img
+                      src="./Pics/Career2.jpeg"
+                      alt="Healthcare workers walking in the hospital hallway"
+                    />
+                    <p>By Mike Crawley</p>
+                    <h4>Noticing a labour shortage? Here's what's really going on in Ontario's job market</h4>
+                    <p>
+                        Employers had '40 years of labour surpluses, they still think workers are a dime a dozen,' says economist
+                    </p>
+                    <a href="./Articles/featuredArticle.html"
+                      >Read full story...</a
+                    >
+                  </article>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+
+      <section id="video-section">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Bf0Q0S2tXNE?si=0ixmDWlONGiJMnDQ"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </section>
+      <section>
+        <table>
+          <tr>
+            <th>Month</th>
+            <th>Visitors</th>
+          </tr>
+          <tr>
+            <td>January</td>
+            <td>130158</td>
+          </tr>
+          <tr>
+            <td>February</td>
+            <td>120295</td>
+          </tr>
+          <tr>
+            <td>March</td>
+            <td>250300</td>
+          </tr>
+          <tr>
+            <td>April</td>
+            <td>580387</td>
+          </tr>
+          <tr>
+            <td>June</td>
+            <td>450569</td>
+          </tr>
+          <tr>
+            <td>July</td>
+            <td>770781</td>
+          </tr>
+        </table>
+      </section>
     </main>
     <footer id="cookies"><a href="#">Accept cookies</a></footer>
   </body>
