--- a/about.html
+++ b/about.html
@@ -60,6 +60,6 @@
         </p>
       </section>
     </main>
-    <footer id="cookies"><a href="#">Accept cookies</a></footer>
+    <footer><a href="#">Accept cookies</a></footer>
   </body>
 </html>
