--- a/contactus.html
+++ b/contactus.html
@@ -58,8 +58,8 @@
             <label for="industry">Industry</label
             ><input for="industry" type="checkbox" />
 
-            <label for="technical">Technical</label
-            ><input for="technical" type="checkbox" />
+            <label for="technology">Technology</label
+            ><input for="technology" type="checkbox" />
 
             <label for="career">Career</label
             ><input for="career" type="checkbox" />
@@ -78,6 +78,6 @@
         </form>
       </section>
     </main>
-    <footer id="cookies"><a href="#">Accept cookies</a></footer>
+    <footer><a href="#">Accept cookies</a></footer>
   </body>
 </html>
