--- a/home.html
+++ b/home.html
@@ -79,128 +79,106 @@
         <ul>
           <li>
             <h3>Industry</h3>
-            <ul>
-              <li>
-                <article>
-                  <img
-                    src="./Pics/Industry1.webp"
-                    alt="A pedestrian walks past commercial real estate for lease in Toronto."
-                  />
-                  <p>By Stephanie Hughes</p>
-                  <h4>
-                    Commercial real estate woes in Canada worsened by tax gap
-                  </h4>
-                  <p>
-                    Commercial real estate owners, battered by higher interest
-                    rates, are grappling with another big challenge in Canada: a
-                    property tax system that’s increasingly tilted against them,
-                    according to a report by Altus Group Ltd.
-                  </p>
-                  <a href="./Articles/featuredArticle.html"
-                    >Read full story...</a
-                  >
-                </article>
-              </li>
-              <li>
-                <article>
-                  <img
-                    src="./Pics/Industry2.webp"
-                    alt="A person walks by a row of houses in Toronto."
-                  />
-                  <p>By SMurtaza Haider and Stephen Moranis</p>
-                  <h4>
-                    Hoping for a recession to decrease housing prices is like
-                    wishing for a flood to water your garden
-                  </h4>
-                  <p>
-                    Housing sales data from the Toronto region suggests markets
-                    will likely favour buyers given the sudden increase in
-                    listings — some are even calling it a buyers’ market.
-                  </p>
-                  <a href="./Articles/featuredArticle.html"
-                    >Read full story...</a
-                  >
-                </article>
-              </li>
-            </ul>
+
+            <article>
+              <img
+                src="./Pics/Industry1.webp"
+                alt="A pedestrian walks past commercial real estate for lease in Toronto."
+              />
+              <p>By Stephanie Hughes</p>
+              <h4>Commercial real estate woes in Canada worsened by tax gap</h4>
+              <p>
+                Commercial real estate owners, battered by higher interest
+                rates, are grappling with another big challenge in Canada: a
+                property tax system that’s increasingly tilted against them,
+                according to a report by Altus Group Ltd.
+              </p>
+              <a href="./Articles/articleIndustry1.html">Read full story...</a>
+            </article>
+
+            <article>
+              <img
+                src="./Pics/Industry2.webp"
+                alt="A person walks by a row of houses in Toronto."
+              />
+              <p>By SMurtaza Haider and Stephen Moranis</p>
+              <h4>
+                Hoping for a recession to decrease housing prices is like
+                wishing for a flood to water your garden
+              </h4>
+              <p>
+                Housing sales data from the Toronto region suggests markets will
+                likely favour buyers given the sudden increase in listings —
+                some are even calling it a buyers’ market.
+              </p>
+              <a href="./Articles/articleIndustry2.html">Read full story...</a>
+            </article>
           </li>
           <li>
             <h3>Technology</h3>
-            <ul>
-              <li>
-                <article>
-                  <img
-                    src="./Pics/Tech1.webp"
-                    alt="The back of the Pro is matte glass."
-                  />
-                  <p>By Julian Chokkattu</p>
-                  <h4>Review: Google Pixel 8 and Pixel 8 Pro</h4>
-                  <p>
-                    These pricier Pixels impress with refined hardware and
-                    clever software tricks.
-                  </p>
-                  <a href="./Articles/featuredArticle.html"
-                    >Read full story...</a
-                  >
-                </article>
-              </li>
-              <li>
-                <article>
-                  <img
-                    src="./Pics/Tech2.webp"
-                    alt="The S23 Ultra includes Samsung’s S Pen stylus, complete with an embedded silo for storage."
-                  />
-                  <p>By Allison Johnson</p>
-                  <h4>Samsung Galaxy S23 Ultra review: practically peerless</h4>
-                  <p>
-                    It’s big, expensive, and occasionally weird. But the S23
-                    Ultra lives up to its name.
-                  </p>
-                  <a href="./Articles/featuredArticle.html"
-                    >Read full story...</a
-                  >
-                </article>
-              </li>
-            </ul>
+
+            <article>
+              <img
+                src="./Pics/Tech1.webp"
+                alt="The back of the Pro is matte glass."
+              />
+              <p>By Julian Chokkattu</p>
+              <h4>Review: Google Pixel 8 and Pixel 8 Pro</h4>
+              <p>
+                These pricier Pixels impress with refined hardware and clever
+                software tricks.
+              </p>
+              <a href="./Articles/articleTech1.html">Read full story...</a>
+            </article>
+
+            <article>
+              <img
+                src="./Pics/Tech2.webp"
+                alt="The S23 Ultra includes Samsung’s S Pen stylus, complete with an embedded silo for storage."
+              />
+              <p>By Allison Johnson</p>
+              <h4>Samsung Galaxy S23 Ultra review: practically peerless</h4>
+              <p>
+                It’s big, expensive, and occasionally weird. But the S23 Ultra
+                lives up to its name.
+              </p>
+              <a href="./Articles/articleTech2.html">Read full story...</a>
+            </article>
           </li>
           <li>
             <h3>Career</h3>
-            <ul>
-              <li>
-                <article>
-                  <img
-                    src="./Pics/Career1.jpeg"
-                    alt="A healthcare worker holding an iPad and smiling"
-                  />
-                  <p>By Colin R. Singer</p>
-                  <h4>Here Are The 10 Most-In Demand Jobs In Ontario</h4>
-                  <p>
-                    Healthcare workers and professional and technical services
-                    are in big demand in Ontario meaning job hunters are eyeing
-                    new opportunities compared to the start of the year.
-                  </p>
-                  <a href="./Articles/featuredArticle.html"
-                    >Read full story...</a
-                  >
-                </article>
-              </li>
-              <li>
-                <article>
-                    <img
-                      src="./Pics/Career2.jpeg"
-                      alt="Healthcare workers walking in the hospital hallway"
-                    />
-                    <p>By Mike Crawley</p>
-                    <h4>Noticing a labour shortage? Here's what's really going on in Ontario's job market</h4>
-                    <p>
-                        Employers had '40 years of labour surpluses, they still think workers are a dime a dozen,' says economist
-                    </p>
-                    <a href="./Articles/featuredArticle.html"
-                      >Read full story...</a
-                    >
-                  </article>
-              </li>
-            </ul>
+
+            <article>
+              <img
+                src="./Pics/Career1.jpeg"
+                alt="A healthcare worker holding an iPad and smiling"
+              />
+              <p>By Colin R. Singer</p>
+              <h4>Here Are The 10 Most-In Demand Jobs In Ontario</h4>
+              <p>
+                Healthcare workers and professional and technical services are
+                in big demand in Ontario meaning job hunters are eyeing new
+                opportunities compared to the start of the year.
+              </p>
+              <a href="./Articles/articleCareers1.html">Read full story...</a>
+            </article>
+
+            <article>
+              <img
+                src="./Pics/Career2.jpeg"
+                alt="Healthcare workers walking in the hospital hallway"
+              />
+              <p>By Mike Crawley</p>
+              <h4>
+                Noticing a labour shortage? Here's what's really going on in
+                Ontario's job market
+              </h4>
+              <p>
+                Employers had '40 years of labour surpluses, they still think
+                workers are a dime a dozen,' says economist
+              </p>
+              <a href="./Articles/articleCareers2.html">Read full story...</a>
+            </article>
           </li>
         </ul>
       </section>
@@ -249,6 +227,6 @@
         </table>
       </section>
     </main>
-    <footer id="cookies"><a href="#">Accept cookies</a></footer>
+    <footer><a href="#">Accept cookies</a></footer>
   </body>
 </html>
