Added Script JS

--- a/home.html
+++ b/home.html
@@ -43,6 +43,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contactus.html">Contact</a></li>
         </ul>
+        <button id="change-contrast">Toggle Contrast</button>
       </nav>
     </header>
     <main>
@@ -194,39 +195,11 @@
           allowfullscreen
         ></iframe>
       </section>
-      <section>
-        <table>
-          <tr>
-            <th>Month</th>
-            <th>Visitors</th>
-          </tr>
-          <tr>
-            <td>January</td>
-            <td>130158</td>
-          </tr>
-          <tr>
-            <td>February</td>
-            <td>120295</td>
-          </tr>
-          <tr>
-            <td>March</td>
-            <td>250300</td>
-          </tr>
-          <tr>
-            <td>April</td>
-            <td>580387</td>
-          </tr>
-          <tr>
-            <td>June</td>
-            <td>450569</td>
-          </tr>
-          <tr>
-            <td>July</td>
-            <td>770781</td>
-          </tr>
-        </table>
-      </section>
+
+
+      <section id="section-visitorsTable"></section>
     </main>
-    <footer><a href="#">Accept cookies</a></footer>
+    <footer id="cookies"><a href="#" id="accept-all-cookies">Accept cookies</a></footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
