--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contactus.html">Contact</a></li>
         </ul>
+        <button id="change-contrast">Toggle Contrast</button>
       </nav>
     </header>
     <main>
@@ -60,6 +61,7 @@
         </p>
       </section>
     </main>
-    <footer><a href="#">Accept cookies</a></footer>
+    <footer id="cookies"><a href="#" id="accept-all-cookies">Accept cookies</a></footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
